--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
         "https://*/*"
       ],
       "js" : ["jquery.min.js", "contentscript.js"],
+			"css" : ["content.css"],
       "run_at" : "document_idle",
       "all_frames" : true
     }
