--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name" : "Anthe - Master of Articles",
   "version" : "0.2",
-  "description" : "Master of Articles (a, an, the)",
+  "description" : "Replaces all 'a', 'an', or 'the' in any page with blank.",
   "background_page" : "background.html",
   "page_action" :
   {
